[tool.poetry]
name = "ayed"
version = "0.6.0"
description = "AyED Tools"
repository = "https://github.com/Bocanada/AyED-Tool"
authors = ["Bocanada <24578415+Bocanada@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
openpyxl = "^3.0.7"
rich = "^10.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.902"
black = "^21.6b0"

[tool.poetry.scripts]
ayed = 'ayed.tool:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
