[tool.poetry]
name = "ayed"
version = "1.0.2"
description = "AyED Tools"
repository = "https://github.com/Bocanada/AyED-Tool"
authors = ["Bocanada <24578415+Bocanada@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
openpyxl = "^3.0.7"
rich = "^10.4.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
mypy = {git = "https://github.com/python/mypy"}
flake8-bugbear = "^21.4.3"
coverage = "^5.5"

[tool.poetry.scripts]
ayed = 'ayed.tool:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
